# django-comb

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  justfile  noxfile.py  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  main.yml
docs/: index.md  installation.md  release-notes.md  rules.md
docs/get-involved/: authors.md  contributing.md
docs/management-commands/: get-model-rules.md  lint-models.md
src/django_comb/: _django.py  _rule_files.py  _rules.py
src/django_comb/management/commands/: get_model_rules.py  lint_models.py
tests/assets/django_comb_project/another_app/: model_rules.toml  models.py
tests/assets/django_comb_project/empty_rules_file_app/: model_rules.toml
tests/assets/django_comb_project/failing_app/: model_rules.toml
tests/assets/django_comb_project/invalid_app/: model_rules.toml
tests/assets/django_comb_project/malformed_toml_app/: model_rules.toml
tests/assets/django_comb_project/settings/: _base.py  failing.py  invalid.py  malformed_toml.py  passing.py
tests/assets/django_comb_project/some_app/: model_rules.toml  models.py
tests/functional/: _helpers.py  test_get_model_rules.py  test_lint_models.py
