[project]
name = "django-comb"
version = "0.1.0"
description = "Untangle your Django models"
readme = "README.md"
authors = [
    { name = "David Seddon", email = "david@seddonym.me" }
]
requires-python = ">=3.11"
dependencies = [
    "django>=5.2",
    "pydantic>=2.12.0",
    "rich>=14.2.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "django-types>=0.23.0",
    "import-linter>=2.11",
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
nox = [
    "nox-uv>=0.7.1",
]

[tool.mypy]
exclude = [
    # Don't bother type checking the sample project.
    '^tests/assets/',
]

[tool.importlinter]
root_package = "django_comb"

[[tool.importlinter.contracts]]
name = "Layers"
type = "layers"
containers = ["django_comb"]
layers = [
    "management",
    "_django",
    "_rule_files",
    "_rules",
]
